--- a/Locality/Base.lproj/Main.storyboard
+++ b/Locality/Base.lproj/Main.storyboard
@@ -46,26 +46,25 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Qyq-hI-bDk" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <view contentMode="scaleToFill" id="nSy-9H-c6b" userLabel="Predictions View">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="333"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <viewLayoutGuide key="safeArea" id="PJe-lY-Ijq"/>
+                </view>
             </objects>
             <point key="canvasLocation" x="964" y="193.5960591133005"/>
         </scene>
-        <!--Prediction View Controller-->
+        <!--Predictions-->
         <scene sceneID="iVZ-3j-gL8">
             <objects>
-                <viewController storyboardIdentifier="PredictionViewController" id="6tf-t9-fdb" customClass="PredictionViewController" customModule="Locality" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="PredictionViewController" title="Predictions" id="6tf-t9-fdb" customClass="PredictionViewController" customModule="Locality" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="idn-kA-iEP">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="360"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="VkH-D7-a03">
-                                <rect key="frame" x="0.0" y="44" width="375" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <items>
-                                    <navigationItem title="Predictions" id="trD-lf-gR9"/>
-                                </items>
-                            </navigationBar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="KPp-kH-KSf">
-                                <rect key="frame" x="0.0" y="88" width="375" height="690"/>
+                                <rect key="frame" x="0.0" y="88" width="375" height="238"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
@@ -115,19 +114,26 @@
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="6tf-t9-fdb" id="Gyb-R2-0tJ"/>
+                                    <outlet property="delegate" destination="6tf-t9-fdb" id="Gun-Kv-uvw"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="3a1-Ui-Kvj"/>
                     </view>
+                    <value key="contentSizeForViewInPopover" type="size" width="375" height="360"/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <nil key="simulatedBottomBarMetrics"/>
+                    <size key="freeformSize" width="375" height="360"/>
                     <connections>
-                        <outlet property="navBar" destination="VkH-D7-a03" id="YXJ-D9-6rd"/>
                         <outlet property="predictionTable" destination="KPp-kH-KSf" id="Pnu-Mi-XcS"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="myF-bL-R2h" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1491.5" y="193"/>
+            <point key="canvasLocation" x="1710" y="194"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="N7r-f4-Yx7">
