--- a/Locality/Base.lproj/Main.storyboard
+++ b/Locality/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Q4t-q5-VrE">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="c6R-KF-zVg">
     <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" rotateEnabled="NO" showsTraffic="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Yf8-G8-hko">
-                                <rect key="frame" x="0.0" y="88" width="375" height="690"/>
+                                <rect key="frame" x="0.0" y="44" width="375" height="734"/>
                             </mapView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZAi-zC-ZV2">
                                 <rect key="frame" x="164" y="748" width="47" height="30"/>
@@ -63,9 +63,21 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="360"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="KPp-kH-KSf">
-                                <rect key="frame" x="0.0" y="88" width="375" height="238"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sN9-ob-Nxy">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                <items>
+                                    <navigationItem title="Predictions" id="fb3-i3-7iP">
+                                        <barButtonItem key="backBarButtonItem" title="X" id="5mL-WY-iPU"/>
+                                        <barButtonItem key="leftBarButtonItem" systemItem="stop" id="1Ff-uG-ESD">
+                                            <connections>
+                                                <action selector="dismissView:" destination="myF-bL-R2h" id="N8e-69-3br"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="KPp-kH-KSf">
+                                <rect key="frame" x="0.0" y="44" width="375" height="316"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="PredictionCell" id="Qf6-xn-Jen" customClass="PredictionCell" customModule="Locality" customModuleProvider="target">
@@ -121,10 +133,19 @@
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="3a1-Ui-Kvj" firstAttribute="trailing" secondItem="KPp-kH-KSf" secondAttribute="trailing" id="2io-o7-hXF"/>
+                            <constraint firstItem="sN9-ob-Nxy" firstAttribute="leading" secondItem="3a1-Ui-Kvj" secondAttribute="leading" id="5Ti-kh-qT1"/>
+                            <constraint firstItem="KPp-kH-KSf" firstAttribute="leading" secondItem="3a1-Ui-Kvj" secondAttribute="leading" id="AeB-Bi-9ze"/>
+                            <constraint firstItem="KPp-kH-KSf" firstAttribute="bottom" secondItem="3a1-Ui-Kvj" secondAttribute="bottom" constant="34" id="RqW-dJ-7gM"/>
+                            <constraint firstItem="3a1-Ui-Kvj" firstAttribute="trailing" secondItem="sN9-ob-Nxy" secondAttribute="trailing" id="X4W-Mo-E7n"/>
+                            <constraint firstItem="3a1-Ui-Kvj" firstAttribute="top" secondItem="sN9-ob-Nxy" secondAttribute="top" constant="44" id="ga9-b5-gks"/>
+                            <constraint firstItem="KPp-kH-KSf" firstAttribute="top" secondItem="sN9-ob-Nxy" secondAttribute="bottom" id="y7i-d5-iO1"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="3a1-Ui-Kvj"/>
                     </view>
                     <value key="contentSizeForViewInPopover" type="size" width="375" height="360"/>
-                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <nil key="simulatedTopBarMetrics"/>
                     <nil key="simulatedBottomBarMetrics"/>
                     <size key="freeformSize" width="375" height="360"/>
                     <connections>
@@ -133,25 +154,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="myF-bL-R2h" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1710" y="194"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="N7r-f4-Yx7">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Q4t-q5-VrE" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="AWM-kI-Lzn">
-                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="c6R-KF-zVg" kind="relationship" relationship="rootViewController" id="Oup-UW-hkc"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="0eD-kl-CbV" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="21.600000000000001" y="193.5960591133005"/>
+            <point key="canvasLocation" x="1709.5999999999999" y="193.5960591133005"/>
         </scene>
     </scenes>
 </document>
