--- a/Locality/Base.lproj/Main.storyboard
+++ b/Locality/Base.lproj/Main.storyboard
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" rotateEnabled="NO" showsTraffic="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Yf8-G8-hko">
-                                <rect key="frame" x="0.0" y="44" width="375" height="734"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                             </mapView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZAi-zC-ZV2">
                                 <rect key="frame" x="164" y="748" width="47" height="30"/>
@@ -32,11 +32,11 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="Yf8-G8-hko" firstAttribute="leading" secondItem="exc-Oi-Mgr" secondAttribute="leading" id="5eX-bg-Y4S"/>
-                            <constraint firstItem="Yf8-G8-hko" firstAttribute="bottom" secondItem="Ae4-Kd-fFp" secondAttribute="bottom" id="Ltf-eC-mCY"/>
-                            <constraint firstItem="ZAi-zC-ZV2" firstAttribute="bottom" secondItem="Yf8-G8-hko" secondAttribute="bottom" id="RuU-fB-gjP"/>
+                            <constraint firstItem="Yf8-G8-hko" firstAttribute="bottom" secondItem="exc-Oi-Mgr" secondAttribute="bottom" id="Ltf-eC-mCY"/>
+                            <constraint firstItem="ZAi-zC-ZV2" firstAttribute="bottom" secondItem="Ae4-Kd-fFp" secondAttribute="bottom" id="RuU-fB-gjP"/>
                             <constraint firstAttribute="trailing" secondItem="Yf8-G8-hko" secondAttribute="trailing" id="lA2-d6-srO"/>
                             <constraint firstItem="ZAi-zC-ZV2" firstAttribute="centerX" secondItem="Yf8-G8-hko" secondAttribute="centerX" id="nye-CX-kdM"/>
-                            <constraint firstItem="Yf8-G8-hko" firstAttribute="top" secondItem="Ae4-Kd-fFp" secondAttribute="top" id="vz1-kB-6Cg"/>
+                            <constraint firstItem="Yf8-G8-hko" firstAttribute="top" secondItem="exc-Oi-Mgr" secondAttribute="top" id="vz1-kB-6Cg"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Ae4-Kd-fFp"/>
                     </view>
